0026584: Eliminate compile warnings obtained by building occt with vc14: declaration of local variable hides class member

Eliminated warning "declaration of variable hides class member"